# fpltools

./: .gitignore  CLAUDE.md  README.md  env.example  fpl api tresults.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/docs/: fpl-product-vision.md  project-kickoff.md
.claude/skills/alfred-api/: SKILL.md
.claude/skills/bi-code/: SKILL.md
.claude/skills/fpl/: SKILL.md
.claude/skills/learn/: SKILL.md
.claude/skills/prompt-eng/: SKILL.md
.claude/skills/viz-review/: SKILL.md
docs/: roadmap.md
docs/architecture/: bi-execution.md  domain-integration.md  overview.md
docs/decisions/: handoff-core-pm.md  handoff-core-reply.md
docs/reference/: fpl-api.md
notebooks/: bi_demo.ipynb  eval_loop.ipynb  prompt_audit.ipynb  subdomain_flows.ipynb
references/: deep-research-report.md  fpl viewer.md
references/archive/: discussion.md  features.md  fpl api notes.md  fpl_client.py
scripts/: bi_cli.py  chat_runner.py  explore_fpl_api.py  seed_demo.py  serve.py  sync.py  test_fpl_api.py
sql/: 001_initial_schema.sql  001_schema.sql
src/: __init__.py  config.py  database.py  fpl_client.py  pipeline.py
src/alfred_fpl/: __init__.py  config.py
src/alfred_fpl/bi/: __init__.py  analytics.py  data_access.py  executor.py  schemas.py  viz.py
src/alfred_fpl/db/: client.py
src/alfred_fpl/domain/: __init__.py  crud_middleware.py  formatters.py  schema.py
src/web/: app.py  auth.py  sessions.py
tests/: conftest.py  test_bi_analytics.py  test_bi_schemas.py  test_bi_viz.py  test_custom_tools.py  test_domain.py  test_executor.py
(+11 files in other folders)
